# QuizAI

./: .gitignore  ai_model_preset.sql  quiz_ai.sql  quiz_ai_forum.sql  sql_practice_record_detail.sql
QuizAI-admin/: index.html  package-lock.json  package.json
QuizAI-admin/src/: App.vue  (+1 more)
QuizAI-agent/: .env.example  README.md  pyproject.toml
QuizAI-agent/data/: docstore.db  memory.db
QuizAI-agent/data/vector_store/: chroma.sqlite3
QuizAI-agent/src/quizai_agent/: __init__.py  main.py
QuizAI-agent/src/quizai_agent/agent/: base_agent.py  chat_agent.py  rag_agent.py  search_agent.py
QuizAI-agent/src/quizai_agent/agent/graph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
QuizAI-agent/src/quizai_agent/agent/memory/: __init__.py  mongo_memory.py  sqlite_memory.py
QuizAI-agent/src/quizai_agent/agent/prompt/: __init__.py  chat_prompt.py  rag_prompt.py  search_prompt.py  system_prompt.py
QuizAI-agent/src/quizai_agent/api/: chat_router.py  config_router.py  rag_router.py
QuizAI-agent/src/quizai_agent/core/: lifecycle.py  settings.py
QuizAI-agent/src/quizai_agent/llm/: __init__.py  llm_client.py
QuizAI-agent/src/quizai_agent/models/schemas/: __init__.py  config.py
QuizAI-agent/src/quizai_agent/rag/: docstore.py  embedding.py  knowledge_client.py  rag_service.py  splitter.py  store_factory.py  vector_store.py
QuizAI-agent/src/quizai_agent/tools/: search_tool.py
QuizAI-agent/src/quizai_agent/utils/: search_util.py  sse.py
QuizAI-backend/: pom.xml
QuizAI-minipro/: app.js  app.json  app.wxss  project.config.json  project.private.config.json
(+206 files in other folders)
